fix awards experiences spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -285,7 +285,7 @@ a {
     justify-content: flex-start;
     align-items: center;
 	padding: 1em 2em;
-	margin-top: 25vh;
+	margin-top: 30vh;
 	width: 100%;
 	height: 100%;
 }
@@ -337,7 +337,7 @@ a {
 
 	.homepage-description{
 		width: 45em;
-		margin-top: 40vh;
+		margin-top: 35vh;
 		margin-bottom: 6em;
 	}
 }
@@ -1207,19 +1207,48 @@ a {
     align-self: center;
 }
 
+.awards {
+	padding-bottom: 3em;
+	margin-bottom: 2em;
+}
+
+.awards-title {
+	font-size: var(--fs-xl);
+	font-weight: var(--fw-med);
+	margin: 0 0 1em 0;
+}
+
 .awards-item-container {
-    display: grid;
-    grid-template-columns: 1fr auto;  /* Text takes up most space, date adjusts automatically */
-    align-items: start;  /* Align items to the top */
+    display: flex;
+    align-items: start;
     margin: 0;
     padding: 0;
-    gap: 2em;  /* Space between text and date */
+    gap: 1.5em; 
 }
 
 .awards-item-text {
-    text-align: left;  /* Force text to align left */
+    width: 60vw;
+	text-align: left;  
     margin: 0;
     padding: 0;
+}
+
+@media (min-width: 400px) {
+	.awards-item-text {
+		width: 56vw;
+	}
+}
+
+@media (min-width: 800px) {
+	.awards-item-text {
+		width: 65vw;
+	}
+}
+
+@media (min-width: 1100px) {
+	.awards-item-text {
+		width: 73vw;
+	}
 }
 
 .awards-item-title {
@@ -1232,24 +1261,15 @@ a {
 
 .awards-item-description {
     margin: 0;
-    padding: 0;
-    text-align: left;  /* Ensure left alignment */
-    list-style: none;  /* Remove bullet points if not needed */
+    padding-left: 3em;
 }
 
 .awards-item-date {
-    justify-self: end;  /* Push date to the far right */
+    justify-self: end;  
     text-align: right;
     min-width: 8em;
-    align-self: flex-start;  /* Vertically align with text start */
+    align-self: center; 
     margin: 0;
-}
-
-.awards-item-text {
-    border: 1px solid red;
-}
-.awards-item-date {
-    border: 1px solid blue;
 }
 
 .healthcare {
